name:                yeslets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/yeslets#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable yeslets
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: Site
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , logging
                     , fn
                     , fn-extra
                     , dotenv
                     , text
                     , directory
                     , clientsession
                     , bytestring
                     , postgresql-simple
                     , resource-pool
                     , mtl
                     , lens
                     , xmlhtml
                     , containers
                     , dotenv
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yeslets
